--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ asgiref==3.3.1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+cloudinary==1.25.0
 cryptography==3.4.7
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
 django-appconf==1.0.4
 django-avatar==5.0.0
+django-cloudinary-storage==0.3.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.1.2
@@ -21,6 +24,3 @@ six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.4
 whitenoise==5.2.0
-gunicorn==20.0.4
-django-cloudinary-storage==0.3.0
-cloudinary==1.25.0
