--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-cloudinary-storage==0.3.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.1.2
+psycopg2==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
 python3-openid==3.2.0
