--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,25 @@ sqlparse==0.4.1
 urllib3==1.26.4
 whitenoise==5.2.0
 gunicorn==20.0.4
+BaseHash==3.0.9
+ImageHash==4.2.1
+Pillow==9.0.0
+requests==2.25.1
+Werkzeug==2.0.2
+whitenoise==5.3.0
+asgiref==3.3.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+defusedxml==0.7.1
+idna==2.10
+oauthlib==3.1.0
+psycopg2==2.8.6
+pycparser==2.20
+PyJWT==2.0.1
+python3-openid==3.2.0
+pytz==2021.1
+requests-oauthlib==1.3.0
+six==1.15.0
+gunicorn==20.0.4
